--- a/result_2021.ipynb
+++ b/result_2021.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -699,12 +699,11 @@
    "source": [
     "df21['승리팀'] = df21['result'].fillna('우천취소')\n",
     "\n",
-    "if df21['result'] > 0 : \n",
-    "    df21['승리팀'] = df21['홈팀']\n",
-    "elif df21['result'] < 0 : \n",
-    "    df21['승리팀'] = df21['원정팀']\n",
-    "else : \n",
-    "    \"무승부\""
+    "df21.loc[df21['result'] >0, '승리팀'] = df21['홈팀']\n",
+    "df21.loc[df21['result'] <0, '승리팀'] = df21['원정팀']\n",
+    "df21.loc[df21['result'] == 0, '승리팀'] = '무승부'\n",
+    "\n",
+    "df21"
    ]
   },
   {
